examples/example_31/input/example_31.v
(* -*- coq-prog-args: ("-emacs" "-nois") -*- *)
Fail Check Set.
